[tool.poetry]
name = "wallet-querier"
version = "0.1.0"
description = ""
authors = ["Walter Qian <walterqian16@gmail.com>"]
readme = "README.md"
packages = [{include = "wallet_querier"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.1"
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
